[package]
name = "fractal_os"
version = "0.1.0"
authors = ["martin-bucinskas <7595909+martin-bucinskas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.11"
volatile = "0.4.1"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
