[package]
name = "fractal_os"
version = "0.1.0"
authors = ["martin-bucinskas <7595909+martin-bucinskas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 120

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = "0.9.11"
volatile = "0.4.1"
spin = "0.5.2"
x86_64 = "0.12.2"
uart_16550 = "0.2.10"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
